🚧 Ruta debug temporal para ver usuarios y productos

--- a/backend/templates/admin/promociones.html
+++ b/backend/templates/admin/promociones.html
@@ -10,8 +10,8 @@
 
   <!-- 🔒 Seguridad y lógica -->
   <script src="/static/js/shared/verificarSesion.js" data-rol="admin"></script>
-  <script type="module" defer src="/static/js/promos/promo_eventos.js"></script>
-  <script defer src="/static/js/promos/promo_form_campos.js"></script>
+  <script type="module" src="/static/js/admin/promo_eventos.js"></script>
+  <script type="module" src="/static/js/admin/promo_form.js"></script>
 
   <style>
     :root {
